# codefact

./: Cargo.toml  README.md  deny.toml
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  store.rs  worker.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  engine.rs  graph.rs  lib.rs  miner.rs  model.rs  paths.rs  secrets.rs  selector.rs  sender.rs  store.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
packaging/: install.sh
packaging/homebrew/: codefact.rb  codefacts.rb
packaging/npm/: PUBLISH.md  package.json
packaging/npm-platforms/darwin-arm64/: package.json
packaging/npm-platforms/linux-x64/: package.json
packaging/scoop/: codefact.json  codefacts.json
