[package]
name = "codefact-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codefact"
path = "src/main.rs"

[dependencies]
codefact-core = { path = "../core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
auto-launch = "0.5"
async-trait = "0.1"
iii-sdk = "0.21.6"
iii-helpers = "0.21.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
