[package]
name = "codefact-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
async-trait = "0.1"
directories = "5"
sha2 = "0.10"
chrono = { version = "0.4", features = ["clock"] }
ureq = { version = "2", features = ["json", "tls"] }
tokio = { version = "1", features = ["process", "time", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
