[package]
name = "codefacts-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
codefacts-core = { path = "../../crates/core" }

[[bin]]
name = "codefacts-desktop"
path = "src/main.rs"
